Second publication of psbapp-sptpts
