# design/openapi.yml
@@ -33,12 +33,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  categories:
-                    type: array
-                    items:
-                      type: string
+                $ref: '#/components/schemas/CategoriesList'
   ##### SEARCH API
   /search/p:
     get:
@@ -80,6 +75,15 @@ paths:
 
 components:
   schemas:
+    CategoriesList:
+      type: object
+      required:
+        - categories
+      properties:
+        categories:
+          type: array
+          items:
+            type: string
     PlaceList:
       type: object
       properties:
