# website/src/app/core/interfaces/api.interface.ts
@@ -2,3 +2,4 @@ import { components } from 'src/schema';
 
 export type PlaceList = components['schemas']['PlaceList'];
 export type PlaceInfo = components['schemas']['PlaceInfo'];
+export type CategoriesList = components['schemas']['CategoriesList'];
